seperated front end and backend build and deployments

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Family Weather Wardrobe</title>
+    <meta name="description" content="Get personalized clothing suggestions for your family based on today's weather or an upcoming trip." />
+    <link rel="manifest" href="/manifest.json">
+    <meta name="theme-color" content="#4f46e5">
+    <meta name="apple-mobile-web-app-title" content="Family Weather Wardrobe">
+    <link rel="apple-touch-icon" href="/icons/icon-192.png">
     <script src="https://cdn.tailwindcss.com"></script>
   <script type="importmap">
 {
