--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="apple-mobile-web-app-title" content="Family Weather Wardrobe">
     <link rel="apple-touch-icon" href="/icons/icon-192.svg">
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="/env.js"></script>
 <link rel="stylesheet" href="/index.css">
 </head>
   <body class="bg-slate-50 dark:bg-slate-900">
