debug: Add logging to diagnose FUNCTION_URL loading

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <meta name="theme-color" content="#4f46e5">
     <meta name="apple-mobile-web-app-title" content="Family Weather Wardrobe">
     <link rel="apple-touch-icon" href="/icons/icon-192.svg">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Load runtime config BEFORE any other scripts -->
     <script src="/env.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
 <link rel="stylesheet" href="/index.css">
 </head>
   <body class="bg-slate-50 dark:bg-slate-900">
