feat(ui): modern glassmorphism redesign and backend url fix

--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
     <link rel="apple-touch-icon" href="/icons/icon-192.svg">
     <!-- Load runtime config BEFORE any other scripts -->
     <script src="/env.js"></script>
-    <script src="https://cdn.tailwindcss.com"></script>
-<link rel="stylesheet" href="/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/index.css">
 </head>
-  <body class="bg-slate-50 dark:bg-slate-900">
+  <body class="bg-gradient-to-br from-slate-900 via-slate-800 to-slate-900 min-h-screen text-slate-100 antialiased selection:bg-indigo-500 selection:text-white">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
 </body>
